# bolty-rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSING.md  README.md  deny.toml
.githooks/: pre-commit
.github/workflows/: audit.yml  ci.yml  deny.yml  esp32-check.yml
LICENSES/: NOTICE.md
apps/bolty-cli/: Cargo.toml  FINDINGS.md
apps/bolty-cli/src/: audit.rs  burn.rs  common.rs  diagnose.rs  inspect.rs  keys.rs  keyver.rs  main.rs  mock_transport.rs  picc.rs  scan_keys.rs  testck.rs  transport.rs  try_key.rs  ver.rs  wipe.rs
apps/bolty-cli/tests/: integration.rs
apps/bolty-esp32/: Cargo.toml  partitions.csv  sdkconfig.defaults
apps/bolty-esp32/.cargo/: config.toml
apps/bolty-esp32/src/: ble.rs  button.rs  cert_gen.rs  commands.rs  display.rs  firmware.rs  main.rs  ota.rs  rest.rs  service.rs  tls.rs  wifi.rs  workflow.rs
apps/bolty-esp32/src/firmware/: card_operations.rs  console_commands.rs  diagnostics_commands.rs  nvs.rs  serial_console.rs  service.rs  utils.rs
apps/bolty-stm32/: Cargo.toml  README.md  build.rs  memory.x
apps/bolty-stm32/src/: main.rs
crates/bolty-common/: Cargo.toml
crates/bolty-common/src/: lib.rs
crates/bolty-core/: Cargo.toml
crates/bolty-core/src/: assessment.rs  commands.rs  config.rs  constants.rs  crypto.rs  derivation.rs  issuer.rs  lib.rs  picc.rs  provenance.rs  secret.rs  service.rs  uid.rs  util.rs  workflow.rs
crates/bolty-core/tests/: integration_assessment.rs  proptest_crypto.rs
crates/bolty-mfrc522/: Cargo.toml
crates/bolty-mfrc522/src/: lib.rs
crates/bolty-mfrc522/tests/: loopback.rs
crates/bolty-ntag/: Cargo.toml
crates/bolty-ntag/src/: lib.rs
crates/bolty-ntag/tests/: integration.rs  mock.rs
crates/bolty-pn532/: Cargo.toml
crates/bolty-pn532/src/: lib.rs
crates/mfrc522-pcd/: Cargo.toml
crates/mfrc522-pcd/src/: lib.rs
crates/pn532-transport/: Cargo.toml
crates/pn532-transport/src/: lib.rs
docs/: CONTRIBUTING.md  ROADMAP.md  architecture.md  ble-research.md  bolty-comparison.md  card-safety.md  feature-parity-plan.md  key-derivation-decision.md  ndef-evaluation.md  ntag424-auth.md  ntag424-test-plan.md  parity-matrix.md  security.md  st25r95-plan.md  unified-board-config.md
tests/fixtures/assessment/: issuer_matching.toml  scenarios.toml
tests/fixtures/derivation/: boltcard_deterministic.toml  cross_repo_vectors.json
tests/fixtures/picc/: valid_picc.toml
tests/fixtures/serial/: commands.toml
tests/security/: Cargo.toml  audit_integrity.rs  debug_redaction.rs  key_zeroization.rs  main.rs  provenance_classification.rs  state_transition_guards.rs  url_validation.rs
tools/: ota-sign.py
