[workspace]
resolver = "2"
members = [
    "crates/*",
    "apps/*",
]

[workspace.dependencies]
ntag424 = { git = "https://github.com/Amperstrand/ntag424.git", rev = "15d01c439492f6da5a0ce5cd273976cfeddf4ee5", default-features = false, features = ["sdm", "key-diversification", "alloc"] }
mfrc522 = { git = "https://github.com/Amperstrand/mfrc522-rs.git", rev = "84f4f29bc56328676c7471f398204852ac1cc6cc" }
iso14443 = { git = "https://github.com/Amperstrand/iso14443-rs.git", branch = "ai-experiments", features = ["alloc"] }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
indexing_slicing = "warn"
string_slice = "warn"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
