[package]
name = "bolty-cli"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "NTAG424 card programming CLI via PCSC"

[[bin]]
name = "bolty-cli"
path = "src/main.rs"

[dependencies]
bolty-core = { path = "../../crates/bolty-core", features = ["std"] }
bolty-ntag = { path = "../../crates/bolty-ntag" }
pcsc = "=2.9.0"
clap = { version = "=4.6.1", features = ["derive"] }

tokio = { version = "=1.52.3", features = ["rt", "macros", "rt-multi-thread", "time"] }
anyhow = "=1.0.102"
getrandom = "=0.3.4"

[dev-dependencies]
aes = "=0.9.0"
cmac = "=0.8.0"
bolty-core = { path = "../../crates/bolty-core", features = ["std"] }

[lints]
workspace = true
