[package]
name = "bolty-esp32"
version = "0.1.0"
edition = "2024"
description = "Bolty NFC bolt card firmware for ESP32 + MFRC522"

[[bin]]
name = "bolty-esp32"
path = "src/main.rs"

[features]
default = []
wifi = []
rest = ["wifi"]
ota = ["wifi"]

[dependencies]
bolty-core = { path = "../../crates/bolty-core" }
bolty-ntag = { path = "../../crates/bolty-ntag" }
bolty-mfrc522 = { path = "../../crates/bolty-mfrc522" }
embedded-hal = "1"
embedded-svc = "0.29"
heapless = { version = "0.8", default-features = false }
ntag424 = { workspace = true }
iso14443 = { path = "../../vendor/iso14443" }
log = "0.4"

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-sys = { version = "0.37", features = ["binstart"] }
esp-idf-hal = "0.46"
esp-idf-svc = "0.52"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

[profile.release]
opt-level = "s"
