[package]
name = "bolty-esp32"
version = "0.1.0"
edition = "2024"
description = "Bolty NFC bolt card firmware for ESP32 + MFRC522"

[[bin]]
name = "bolty-esp32"
path = "src/main.rs"

[features]
default = []
nfc-mfrc522 = []
led-matrix = []
display-st7789 = ["dep:mipidsi", "dep:embedded-graphics"]
board-m5atom = ["nfc-mfrc522", "led-matrix"]
board-m5stick = ["nfc-mfrc522", "display-st7789"]
wifi = []
rest = ["wifi"]
ota = ["wifi"]

[dependencies]
bolty-core = { path = "../../crates/bolty-core" }
bolty-ntag = { path = "../../crates/bolty-ntag" }
bolty-mfrc522 = { path = "../../crates/bolty-mfrc522" }
embedded-hal = "=1.0.0"
embedded-svc = "=0.29.0"
heapless = { version = "=0.9.2", default-features = false }
ntag424 = { workspace = true }
iso14443 = { path = "../../vendor/iso14443" }
log = "=0.4.29"
mipidsi = { version = "=0.9.0", optional = true }
embedded-graphics = { version = "=0.8.2", optional = true }

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-sys = { version = "=0.37.2", features = ["binstart"] }
esp-idf-hal = "=0.46.2"
esp-idf-svc = "=0.52.1"

[build-dependencies]
embuild = { version = "=0.32.0", features = ["espidf"] }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.8.2" }
