[package]
name = "bolty-stm32"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Bolt Card firmware for STM32 + MFRC522 (bare-metal no_std)"

[[bin]]
name = "bolty-stm32"
test = false
bench = false

[dependencies]
bolty-core = { path = "../../crates/bolty-core", default-features = false, features = ["alloc"] }
bolty-ntag = { path = "../../crates/bolty-ntag" }
bolty-mfrc522 = { path = "../../crates/bolty-mfrc522" }
mfrc522-pcd = { path = "../../crates/mfrc522-pcd" }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-alloc = "0.5"
embedded-hal = "1.0"

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
# Host-side stubs for testing
embedded-hal = "1.0"

[features]
default = []

# Board selection (mutually exclusive)
board-stm32f4-disco = []

# NFC frontend
nfc-mfrc522 = []
