[package]
name = "bolty-core"
version = "0.1.0"
edition = "2024"
description = "Portable Bolt Card domain logic: derivation, assessment, commands, secrets"

[dependencies]
aes = { version = "=0.8.4", default-features = false }
cbc = { version = "=0.1.2", default-features = false, features = ["block-padding"] }
cmac = { version = "=0.7.2", default-features = false }
heapless = { version = "=0.9.2", default-features = false }
zeroize = { version = "=1.8.2", default-features = false }

[features]
default = ["std"]
std = []
alloc = []

[dev-dependencies]
