[package]
name = "bolty-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Portable Bolt Card domain logic: derivation, assessment, config, PICC"

[dependencies]
aes = { version = "=0.9.1", default-features = false }
cbc = { version = "=0.2.0", default-features = false, features = ["block-padding"] }
heapless = { version = "=0.9.2", default-features = false }
zeroize = { version = "=1.8.2", default-features = false }

[features]
default = ["std"]
std = []
alloc = []

[lints]
workspace = true

[dev-dependencies]
