[package]
name = "bolty-mfrc522"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "MFRC522 NFC transport for ntag424"

[dependencies]
mfrc522-pcd = { path = "../mfrc522-pcd" }
ntag424 = { workspace = true }
iso14443 = { workspace = true }
mfrc522 = { workspace = true }
embedded-hal = "=1.0.0"
log = "=0.4.29"

[dev-dependencies]
iso14443 = { workspace = true, features = ["std"] }

[lints]
workspace = true
