[package]
name = "bolty-ntag"
version = "0.1.0"
edition = "2024"
description = "NTAG424 card operations (burn, wipe, inspect) and ntag424 facade"

[dependencies]
bolty-core = { path = "../bolty-core" }
ntag424 = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
aes = "=0.9.0"
cmac = "=0.8.0"
