[package]
name = "mfrc522-pcd"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "MFRC522 PcdTransceiver for ISO 14443 — shared by bolty-rs and ccid-firmware-rs"

[dependencies]
iso14443 = { workspace = true }
mfrc522 = { workspace = true }
embedded-hal = "=1.0.0"
log = "=0.4.29"

[lints]
workspace = true
