[package]
name = "pn532-transport"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "PN532 NFC device — card detection and APDU exchange (shared by bolty-rs and ccid-firmware-rs)"

[dependencies]
pn532 = { version = "=0.5.0", features = ["msb-spi"], default-features = false }
embedded-hal = "=1.0.0"
log = "=0.4.29"

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-hal = "=0.46.2"

[lints]
workspace = true
